--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me: Ismael Velez</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
+
+<link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
         <!--The header of my doc.-->
@@ -41,6 +48,12 @@
         </ul>
 
     </main>
+
+    <footer>
+
+        &copy; 2022 - Ismael Velez
+
+    </footer>
 
 </body>
 </html>
