--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
 
 </head>
 <body>
+    <header>
         <!--The header of my doc.-->
-        <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="img/logo-96X96.svg" alt="Blue origami logo">
+                    <h1>About me Web Dev 1</h1>
+                <div class="navbar">
+                    <ul>
+                        <li><a href="#bio">Bio</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#lit">Blog</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
+                    </ul>
+                </div>
+            </div>
 
-        <img src="img/logo-96X96.svg" alt="Blue origami logo">
-        <h1>About me Web Dev 1</h1>
+
+        </nav>
+
+         
         
     </header>
         <!--The main hold all the main content.-->
