--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
 
 <link href="css/style.css" rel="stylesheet">
+<link href="css/nav.css" rel="stylesheet">
 
 </head>
 <body>
